--- a/Module2-sol/index.html
+++ b/Module2-sol/index.html
@@ -5,6 +5,7 @@
 	<title>Coursera Module 2 solution</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/stylesheet.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<h1>Our Menu</h1>
