--- a/module4coursera/index.html
+++ b/module4coursera/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Coursera Mod4 Sol</title>
+  <script src="hello.js"></script>
+  <script src="goodbye.js"></script>
+  <script src="script.js"></script>
 
+</head>
+<body>
+  <h1>Do not try to cheat my assignment.. U won't learn anything.. God is watching you.. :P </h1>
+<style>
+h1:hover
+ {
+background-color: maroon;
+color:white;
+ }
+h1{
+  text-align: center;
+  font-size: 40px;
+  font-weight: 5px;
+}
+a{
+  text-align: center;
+  font-size: 20px;
+}
+</style>
+  <a>
+    You can check my javascript by inspecting the webpage. Also you can change the names to check whether the goodbye and hello are following the "J/j" criteria.
+  </a>
+</body>
+</html>
